// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldText is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="foo"
  inputid="1"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldText testClass1 testClass2 euiFieldText--withIcon"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="text"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props controlOnly is rendered 1`] = `
<eui-validatable-control>
  <input
    class="euiFieldText"
    id="euiFieldText_generated-id"
    type="text"
  />
</eui-validatable-control>
`;

exports[`EuiFieldText props fullWidth is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
  inputid="euiFieldText_generated-id"
>
  <eui-validatable-control>
    <input
      class="euiFieldText euiFieldText--fullWidth"
      id="euiFieldText_generated-id"
      type="text"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props isInvalid is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  inputid="euiFieldText_generated-id"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldText"
      id="euiFieldText_generated-id"
      type="text"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props isLoading is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  inputid="euiFieldText_generated-id"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldText euiFieldText-isLoading"
      id="euiFieldText_generated-id"
      type="text"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props readOnly is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  inputid="euiFieldText_generated-id"
  readonly="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldText"
      id="euiFieldText_generated-id"
      readonly=""
      type="text"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
